# multimodal-yolo11-rk3588

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: yolo_pipeline.h
cpp/src/: main.cc  yolo_pipeline.cc
python/: auto_convert.py  benchmark_dual.py  convert.py  infer_rknn.py  infer_single_rknn.py
